Change the size of a fields

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ DATA DE VALIDADE: 03 DE MAIO DE 2026</textarea>
       <div class="field" id="f_processo" style="left: 720px; top: 83px;">PROCESSO Nº</div>
       <div class="field" id="f_razao" style="left: 335px; top: 235px; width:760px;">RAZÃO SOCIAL</div>
       <div class="field" id="f_cnpj" style="left: 400px; top: 275px;">CNPJ</div>
-      <div class="field" id="f_endereco" style="left: 245px; top: 300px; width:740px;">ENDEREÇO</div>
-      <div class="field" id="f_atividade" style="left: 275px; top: 335px; width:50%;">ATIVIDADE</div>
+      <div class="field" id="f_endereco" style="left: 245px; top: 300px; width:60%;">ENDEREÇO</div>
+      <div class="field" id="f_atividade" style="left: 275px; top: 335px; width:60%;">ATIVIDADE</div>
       <div class="field" id="f_emissao" style="left: 486px; top: 400px;">DATA EMISSÃO</div>
       <div class="field" id="f_validade" style="left: 485px; top: 437px;">DATA VALIDADE</div>
     </div>
