--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ DATA DE VALIDADE: 03 DE MAIO DE 2026</textarea>
     <button id="extractBtn">Extrair e Preencher</button>
     <button id="resetBtn">Resetar posições</button>
     <button id="exportImageBtn">Exportar como Imagem (PNG)</button>
-    <!-- <a id="downloadHtml" class="download-link" href="#" download="licenca_filler.html">Baixar HTML</a> -->
+    <a id="downloadHtml" class="download-link" href="#" download="licenca_filler.html">Baixar HTML</a>
   </div>
 
   <div class="canvas-wrap" id="canvasWrap" style="width:100%;max-width:900px;">
