--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ DATA DE VALIDADE: 03 DE MAIO DE 2026</textarea>
       <li>Arraste os campos sobre o modelo (funciona com toque e mouse).</li>
       <li>Ajuste o <b>Zoom</b> se necessário e clique em <b>Exportar como Imagem</b>.</li>
     </ol>
-    <p><em>Observação:</em> Se o modelo não aparecer, verifique <code>images/template_page1.png</code> no mesmo domínio.</p>
+    <p><em>Observação:</em> Qualquer necessidade contate: mapasmineração@gmail.com</code> no mesmo domínio.</p>
   </div>
 </div>
 
